added the ability to change the hue of the notebook

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     <div class="notebook-wrapper fade-in">
       <img class="open-notebook" src="opennotebook.png" alt="Open notebook">
       <div id="scrap-canvas" class="scrap-canvas" aria-live="polite"></div>
+      <div class="hue-picker">
+        <div class="picker-row">
+          <label for="notebook-hue">Notebook hue</label>
+          <input id="notebook-hue" type="range" min="0" max="360" value="0">
+        </div>
+      </div>
     </div>
   </div>  
 
